<resources>
    <string name="about_preference_title">About OpenTracks</string>
    <string name="about_description"><i>OpenTracks</i> is a sport tracking application that completely respects your privacy.</string>
    <string name="about_url">Project web page: <a href="%1$s">%1$s</a></string>
    <string name="about_version_name">Version name: %1$s</string>
    <string name="about_version_code">Version code: %1$d</string>
    <string name="about_history">OpenTracks is a fork of <a href="https://code.google.com/archive/p/mytracks/"><i>Google\'s MyTracks</i></a> (discontinued in 2016).</string>
    <string name="about_third_party_data">Third-party data</string>
    <string name="about_libraries">Libraries</string>
    <string name="help_feature_title">OpenTracks has the following features:</string>
    <string name="help_feature_content">
        * create GPS tracks\n
        * use a heart rate sensor (Bluetooth LE only)\n
        * voice announcements (by time or distance)\n
        * create markers (incl. pictures)\n
        * works completely offline\n
        * show tracks on a map (see below)
        </string>
    <string name="edit_sharing_preferences_title"> Edit Sharing Location </string>
    <string name="sharing_option_share_with">Share With</string>
    <string name="sharing_option_public">Public</string>
    <string name="sharing_option_friends">Friends</string>
    <string name="sharing_option_no_one">No One</string>
    <string name="sharing_location_key">sharing_location</string>
    <string name="sharing_location_title">Sharing Location</string>
    <string name="sharing_location_summary">Choose who can see your location</string>
    <string-array name="sharing_options">
        <item>No one</item>
        <item>Friends</item>
        <item>Family</item>
        <item>Public</item>
    </string-array>
    <string name="help_track_map_title">How to show a track on a map?</string>
    <string name="help_track_map_content">
        Use the small map icon.\n
        a)
        (live updates) Install <a href="https://github.com/OpenTracksApp/OSMDashboard">OSMDashboard</a>.
        It provides online or offline maps via <a href="https://www.openstreetmap.org">OpenStreetMap</a>.\n
        Actually, OSMDashboard is a separate app that only can access (temporarily) the data of track(s) that are going to be shown.

        \n
        b)
        Via a "normal" map application (e.g., <a href="http://osmand.net/">OsmAnd</a> and <a href="https://maps.me/">MAPS.ME</a>).
        These apps need to support the KMZ file format (only locations and timestamps).
        In fact, an app needs to support <i>ACTION_VIEW</i> with MIME <i>application/vnd.google-earth.kmz</i>.
    </string>
    <string name="help_storage_pictures_title">How does OpenTracks store pictures that were taken as markers?</string>
    <string name="help_storage_pictures_content">These are stored in the app internal storage (i.e., only accessible within OpenTracks).</string>
    <string name="help_track_export_title">How can I export/share recorded tracks?</string>
    <string name="help_track_export_content">
        Tracks can be exported from the Settings as KMZ, KML, or GPX.
        KMZ/KML all data; GPX only locations.
        Tracks shared via the <i>share icon</i> are shared as KMZ.
    </string>
    <string name="help_data_google_play_services_title">Does OpenTracks require/use Google Play Service?</string>
    <string name="help_data_google_play_services_content">No</string>
    <string name="help_recording_title">How does OpenTracks record data?</string>
    <string name="help_recording_content">
        OpenTracks uses the GPS sensor of the device to record the location continuously.
        If the GPS device reports inaccurate data (e.g., location, speed, elevation), OpenTracks cannot do anything about it.
    </string>
    <string name="help_data_storage_title">How does OpenTracks store sensor data?</string>
    <string name="help_data_storage_content">
        Sensor data is stored per recorded location.
        In terms of a heart rate sensor, this means that only <i>one</i> heart rate measurement is stored per location.
        If you are standing still or are indoors, no sensor data will be recorded (but it will be shown).
    </string>
    <string name="help_gps_troubleshooting_title">OpenTracks is not recording locations?</string>
    <string name="help_gps_troubleshooting_content">
        What you can do:\n
        a) check if GPS is enabled,\n
        b) improve GPS reception (e.g., go outdoors),\n
        c) check with <a href="https://f-droid.org/en/packages/com.android.gpstest.osmdroid/">GPSTest</a> app, and\n
        d) disable power saving.\n
        \n
        If everything does not help please report a bug.
    </string>
    <string name="help_support_title">How can I support OpenTracks?</string>
    <string name="help_support_content">
        You can:\n
        a) spread the word about OpenTracks,\n
        b) <a href="https://github.com/OpenTracksApp/OpenTracks/issues">propose features</a>,\n
        c) <a href="https://github.com/OpenTracksApp/OpenTracks/issues">report bugs</a>,\n
        d) help in software development,\n
        e) buy in <a href="https://play.google.com/store/apps/details?id=de.dennisguse.opentracks.playstore">Google Play Store</a>,\n
        f) donate, and\n
        g) do whatever you think helps OpenTracks.
    </string>
    <string name="open_track_as_trackfileformat">Open as %1$s</string>
    <string name="activity_type_airplane">airplane</string>
    <string name="activity_type_atv">ATV</string>
    <string name="activity_type_biking">biking</string>
    <string name="activity_type_blimp">blimp</string>
    <string name="activity_type_boat">boat</string>
    <string name="activity_type_climbing">climbing</string>
    <string name="activity_type_commercial_airplane">commercial airplane</string>
    <string name="activity_type_cross_country_skiing">cross-country skiing</string>
    <string name="activity_type_cycling">cycling</string>
    <string name="activity_type_dirt_bike">dirt bike</string>
    <string name="activity_type_donkey_back_riding">donkey back riding</string>
    <string name="activity_type_driving">driving</string>
    <string name="activity_type_driving_bus">driving bus</string>
    <string name="activity_type_driving_car">driving car</string>
    <string name="activity_type_escooter">escooter</string>
    <string name="activity_type_kickscooter">scooter</string>
    <string name="activity_type_ferry">ferry</string>
    <string name="activity_type_frisbee">frisbee</string>
    <string name="activity_type_gliding">gliding</string>
    <string name="activity_type_hang_gliding">hang gliding</string>
    <string name="activity_type_helicopter">helicopter</string>
    <string name="activity_type_hiking">hiking</string>
    <string name="activity_type_horse_back_riding">horse back riding</string>
    <string name="activity_type_hot_air_balloon">hot air balloon</string>
    <string name="activity_type_ice_sailing">ice sailing</string>
    <string name="activity_type_inline_skating">inline skating</string>
    <string name="activity_type_kayaking">kayaking</string>
    <string name="activity_type_kite_surfing">kite surfing</string>
    <string name="activity_type_land_sailing">land sailing</string>
    <string name="activity_type_mixed_type">mixed type</string>
    <string name="activity_type_motor_bike">motor bike</string>
    <string name="activity_type_motor_boating">motor boating</string>
    <string name="activity_type_mountain_biking">mountain biking</string>
    <string name="activity_type_off_trail_hiking">off trail hiking</string>
    <string name="activity_type_other">other</string>
    <string name="activity_type_paddling">paddling</string>
    <string name="activity_type_para_gliding">para gliding</string>
    <string name="activity_type_rc_airplane">RC airplane</string>
    <string name="activity_type_rc_boat">RC boat</string>
    <string name="activity_type_rc_helicopter">RC helicopter</string>
    <string name="activity_type_riding">riding</string>
    <string name="activity_type_road_biking">road biking</string>
    <string name="activity_type_roller_skiing">roller skiing</string>
    <string name="activity_type_rowing">rowing</string>
    <string name="activity_type_running">running</string>
    <string name="activity_type_sailing">sailing</string>
    <string name="activity_type_seaplane">seaplane</string>
    <string name="activity_type_skate_boarding">skate boarding</string>
    <string name="activity_type_skating">skating</string>
    <string name="activity_type_skiing">skiing</string>
    <string name="activity_type_sky_jumping">sky jumping</string>
    <string name="activity_type_sled">sled</string>
    <string name="activity_type_snow_boarding">snow boarding</string>
    <string name="activity_type_snow_shoeing">snow shoeing</string>
    <string name="activity_type_speed_walking">speed walking</string>
    <string name="activity_type_street_running">street running</string>
    <string name="activity_type_surfing">surfing</string>
    <string name="activity_type_track_cycling">track cycling</string>
    <string name="activity_type_track_running">track running</string>
    <string name="activity_type_trail_hiking">trail hiking</string>
    <string name="activity_type_trail_running">trail running</string>
    <string name="activity_type_train">train</string>
    <string name="activity_type_ultimate_frisbee">ultimate frisbee</string>
    <string name="activity_type_unknown">unknown</string>
    <string name="activity_type_wakeboarding">wakeboarding</string>
    <string name="activity_type_walking">walking</string>
    <string name="activity_type_water_skiing">water skiing</string>
    <string name="activity_type_wind_surfing">wind surfing</string>
    <string name="activity_type_swimming">swimming</string>
    <string name="activity_type_swimming_open">swimming in open water</string>
    <string name="activity_type_workout">workout</string>
    <string name="stats_day">Day</string>
    <string name="daily_lift_moving_time_label">LIFT MOVING TIME</string>
    <string name="daily_lift_total_time_label">Lift Total Time</string>
    <string name="daily_lift_number_unit">Lift(s)</string>
    <string name="daily_lift_number_label">NUMBER OF LIFTS</string>
    <string name="daily_stats_max_speed_label">LIFT MAX SPEED</string>
    <string name="daily_lift_max_speed_unit">km/h</string>
    <string name="daily_run_number_label">NUMBER OF RUNS</string>
    <string name="daily_run_number_unit">Run(s)</string>
    <string name="daily_run_max_vertical_label">RUN MAX VERTICAL</string>
    <string name="daily_run_max_vertical_unit">m</string>
    <string name="activity_type_label">Skiing</string>
    <string name="daily_total_distance_label">TOTAL DISTANCE</string>
    <string name="daily_total_distance_number">0</string>
    <string name="daily_total_distance_unit">km</string>
    <string name="daily_run_avg_speed_label">AVERAGE SPEED</string>
    <string name="daily_max_speed_label">MAX SPEED</string>
    <string name="daily_max_speed_number">0</string>
    <string name="daily_max_speed_unit">km/h</string>
    <string name="daily_temperature_label">TEMPERATURE</string>
    <string name="daily_temperature_unit">°C</string>
    <string name="daily_temperature_number">-18</string>
    <string name="specific_stats_button">L/R stats</string>
    <string name="maximum_speed_label">Maximum Speed</string>
    <string name="average_speed_label">Average Speed</string>
    <string name="run_duration_label">Run Duration</string>
    <string name="total_distance_label">Total Distance</string>
    <string name="maximum_speed_value">0</string>
    <string name="average_speed_value">0</string>
    <string name="run_duration_value">00:00:00</string>
    <string name="total_distance_value">0</string>
</resources>