<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Maximum Speed -->
    <TextView
        android:id="@+id/maximum_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_speed_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/maximum_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_speed_value"
        app:layout_constraintTop_toBottomOf="@id/maximum_speed_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Average Speed -->
    <TextView
        android:id="@+id/average_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed_label"
        app:layout_constraintTop_toBottomOf="@id/maximum_speed_value"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/average_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed_value"
        app:layout_constraintTop_toBottomOf="@id/average_speed_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Run Duration -->
    <TextView
        android:id="@+id/run_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_duration_label"
        app:layout_constraintTop_toBottomOf="@id/average_speed_value"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/run_duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_duration_value"
        app:layout_constraintTop_toBottomOf="@id/run_duration_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Total Distance -->
    <TextView
        android:id="@+id/total_distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance_label"
        app:layout_constraintTop_toBottomOf="@id/run_duration_value"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/total_distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance_value"
        app:layout_constraintTop_toBottomOf="@id/total_distance_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Elevation Profile -->
    <TextView
        android:id="@+id/elevation_profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elevation_profile_label"
        app:layout_constraintTop_toBottomOf="@id/total_distance_value"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- This could be an ImageView if you have a graphical representation, or a TextView if it's just a value -->
    <TextView
        android:id="@+id/elevation_profile_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elevation_profile_value"
        app:layout_constraintTop_toBottomOf="@id/elevation_profile_label"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
