<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <!-- Guidelines -->

    <TextView
        android:id="@+id/aggregated_stats_num_day_tracks"
        style="@style/TextAppearance.OpenTracks.PrimaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/aggregated_stats_day_label"
        app:layout_constraintStart_toEndOf="@+id/aggregated_stats_day_label"
        app:layout_constraintTop_toTopOf="@+id/aggregated_stats_day_label"
        app:layout_constraintVertical_bias="1.0"
        tools:text="(1)" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <ImageView
        android:id="@+id/activity_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:textColorPrimary"
        tools:srcCompat="@drawable/ic_activity_skiing_24dp" />

    <Button
        android:id="@+id/specific_stats_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:elevation="4dp"
        android:padding="0dp"
        android:text="@string/specific_stats_button"
        app:layout_constraintBottom_toBottomOf="@+id/activity_type_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daily_lift_number"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_type_label"
        tools:text="3" />

    <TextView
        android:id="@+id/daily_lift_number_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_lift_number_label"
        app:layout_constraintStart_toEndOf="@+id/daily_lift_number"
        tools:text="@string/daily_lift_number_unit" />

    <TextView
        android:id="@+id/daily_lift_number_label"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_stats_max_speed"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_lift_number"
        app:layout_constraintVertical_bias="0.181"
        tools:text="@string/daily_lift_number_label" />

    <!-- Total Time -->
    <TextView
        android:id="@+id/daily_lift_total_time"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/aggregated_stats_day_label"
        tools:text="1:00:00" />

    <TextView
        android:id="@+id/daily_lift_total_time_label"
        style="@style/TextAppearance.OpenTracks.SecondaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_lift_total_time"
        tools:text="@string/daily_lift_total_time_label" />

    <!-- Moving Time -->


    <TextView
        android:id="@+id/daily_lift_moving_time"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_lift_total_time_label"
        tools:text="00:30:00" />

    <TextView
        android:id="@+id/daily_lift_moving_time_label"
        style="@style/TextAppearance.OpenTracks.SecondaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_lift_moving_time"
        tools:text="@string/daily_lift_moving_time_label" />

    <!-- Max Speed -->

    <TextView
        android:id="@+id/daily_stats_max_speed"
        style="@style/TextAppearance.OpenTracks.SecondaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_lift_number_label"
        tools:text="15" />

    <TextView
        android:id="@+id/daily_stats_max_speed_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_stats_max_speed_label"
        app:layout_constraintStart_toEndOf="@+id/daily_stats_max_speed"
        tools:text="@string/daily_lift_max_speed_unit" />

    <TextView
        android:id="@+id/daily_stats_max_speed_label"
        style="@style/TextAppearance.OpenTracks.SecondaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_stats_max_speed"
        tools:text="@string/daily_stats_max_speed_label" />


    <!--  ************************* The End of Lift Summary ************************************* -->


    <!--  ************************* The Beginning of Run Summary ************************************* -->

    <TextView
        android:id="@+id/daily_run_number_label"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_run_number"
        tools:text="@string/daily_run_number_label" />

    <TextView
        android:id="@+id/daily_total_distance_label"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_total_distance_number"
        tools:text="@string/daily_total_distance_label" />

    <TextView
        android:id="@+id/daily_run_number"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/daily_stats_max_speed_label"
        tools:text="0" />


    <TextView
        android:id="@+id/daily_total_distance_number"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_run_number_label"
        tools:text="@string/daily_total_distance_number" />

    <TextView
        android:id="@+id/daily_run_number_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_run_number_label"
        app:layout_constraintStart_toEndOf="@+id/daily_run_number"
        tools:text="@string/daily_run_number_unit" />


    <TextView
        android:id="@+id/daily_total_distance_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_total_distance_label"
        app:layout_constraintStart_toEndOf="@+id/daily_total_distance_number"
        tools:text="@string/daily_total_distance_unit" />

    <TextView
        android:id="@+id/daily_run_max_vertical"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_lift_moving_time_label"
        tools:text="0" />

    <TextView
        android:id="@+id/daily_run_max_vertical_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_run_max_vertical_label"
        app:layout_constraintStart_toEndOf="@+id/daily_run_max_vertical"
        tools:text="@string/daily_run_max_vertical_unit" />

    <TextView
        android:id="@+id/daily_run_max_vertical_label"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_run_max_vertical"
        tools:text="@string/daily_run_max_vertical_label" />

    <TextView
        android:id="@+id/daily_run_avg_speed"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_run_max_vertical_label"
        tools:text="15" />

    <TextView
        android:id="@+id/daily_max_speed_label"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_max_speed_number"
        tools:text="@string/daily_max_speed_label" />

    <TextView
        android:id="@+id/daily_max_speed_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_max_speed_label"
        app:layout_constraintStart_toEndOf="@+id/daily_max_speed_number"
        tools:text="@string/daily_max_speed_unit" />

    <TextView
        android:id="@+id/daily_max_speed_number"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_run_avg_speed_label"
        tools:text="@string/daily_max_speed_number" />

    <TextView
        android:id="@+id/daily_run_avg_speed_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_run_avg_speed_label"
        app:layout_constraintStart_toEndOf="@+id/daily_run_avg_speed"
        tools:text="@string/daily_total_distance_unit" />

    <TextView
        android:id="@+id/daily_run_avg_speed_label"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_run_avg_speed"
        tools:text="@string/daily_run_avg_speed_label" />

    <TextView
        android:id="@+id/aggregated_stats_day_label"
        style="@style/TextAppearance.OpenTracks.PrimaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/stats_day" />

    <TextView
        android:id="@+id/activity_type_label"
        style="@style/TextAppearance.OpenTracks.PrimaryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/activity_type_label" />

    <View
        android:id="@+id/aggregated_stats_horizontal_line"
        style="@style/HorizontalLine"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/aggregated_stats_num_day_tracks" />

    <!-- Daily Temperature -->

    <TextView
        android:id="@+id/daily_temperature_label"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_temperature_number"
        tools:text="@string/daily_temperature_label" />


    <TextView
        android:id="@+id/daily_temperature_number"
        style="@style/TextAppearance.OpenTracks.PrimaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_total_distance_label"
        tools:text="@string/daily_temperature_number" />

    <TextView
        android:id="@+id/daily_temperature_unit"
        style="@style/TextAppearance.OpenTracks.PrimaryUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/daily_temperature_label"
        app:layout_constraintStart_toEndOf="@+id/daily_temperature_number"
        tools:text="@string/daily_temperature_unit" />

</androidx.constraintlayout.widget.ConstraintLayout>